5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1749_1537.log
== TEST (2019-05-15 19:14:59) 
-- CODE:
from math import*
n=int(input("termo geral da serie: "))
x=float(input("digite um numero real: "))
k=int(input("termo da serie:"))
soma=0
t=0

while(t>0):
	

-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:18:51) 
-- CODE:
from math import*
n=int(input("termo geral da serie: "))
x=float(input("digite um numero real: "))
k=int(input("termo da serie:"))
soma=0
t=1
f=1
while(k<0):
	k=k+1
	soma=soma+(pow(x,t)/(factorial(n)*f)
	f=f-1
print(soma)
-- ERROR:
File "XXXX", line 11
    f=f-1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:24:16) 
-- CODE:
from math import*
n=int(input("termo geral da serie: "))
x=float(input("digite um numero real: "))
k=int(input("termo da serie:"))
soma=0
t=1
f=1
while(k<0):
	k=k+1
	soma=soma+(pow(x,t)/(factorial(n)*f)
	f=f*1
print(soma)
-- ERROR:
File "XXXX", line 11
    f=f*1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:24:27) 
-- CODE:
from math import*
n=int(input("termo geral da serie: "))
x=float(input("digite um numero real: "))
k=int(input("termo da serie:"))
soma=0
t=1
f=1
while(k<0):
	k=k+1
	soma=soma+(pow(x,t)/(factorial(n)*f)
	f=f+1
print(soma)
-- ERROR:
File "XXXX", line 11
    f=f+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:24:47) 
-- CODE:
from math import*
n=int(input("termo geral da serie: "))
x=float(input("digite um numero real: "))
k=int(input("termo da serie:"))
soma=0
t=1
f=1
while(k<0):
	k=k+1
	soma=soma+(pow(x,t)/(factorial(n)*f)

print(soma)
-- ERROR:
File "XXXX", line 12
    print(soma)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:25:30) 
-- CODE:
from math import*
n=int(input("termo geral da serie: "))
x=float(input("digite um numero real: "))
k=int(input("termo da serie:"))
soma=0
t=1
f=1
while(k<0):
	k=k+1
	soma=soma+(pow(x,t)/(factorial(n)*f)

print(round(soma,9)
-- ERROR:
File "XXXX", line 12
    print(round(soma,9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:25:44) 
-- CODE:
from math import*
n=int(input("termo geral da serie: "))
x=float(input("digite um numero real: "))
k=int(input("termo da serie:"))
soma=0
t=1
f=1
while(k<0):
	k=k+1
	soma=soma+(pow(x,t)/(factorial(n)*f)

print(round(k,9)
-- ERROR:
File "XXXX", line 12
    print(round(k,9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:25:52) 
-- CODE:
from math import*
n=int(input("termo geral da serie: "))
x=float(input("digite um numero real: "))
k=int(input("termo da serie:"))
soma=0
t=1
f=1
while(k<0):
	k=k+1
	soma=soma+(pow(x,t)/(factorial(n)*f)

print(k,9)
-- ERROR:
File "XXXX", line 12
    print(k,9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:26:13) 
-- CODE:
from math import*
n=int(input("termo geral da serie: "))
x=float(input("digite um numero real: "))
k=int(input("termo da serie:"))
soma=0
t=1
f=1
while(k<0):
	k=k+1
	soma=soma+(pow(x,t)/(factorial(n)*f)

print(n,9)
-- ERROR:
File "XXXX", line 12
    print(n,9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:26:51) 
-- CODE:
from math import*
n=int(input("termo geral da serie: "))
x=float(input("digite um numero real: "))
k=int(input("termo da serie:"))
soma=0
while(k<0):
	k=k+1
	soma=soma+(pow(x,t)/(factorial(n)*f)

print(n,9)
-- ERROR:
File "XXXX", line 10
    print(n,9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:27:24) 
-- CODE:
from math import*
n=int(input("termo geral da serie: "))
x=float(input("digite um numero real: "))
k=int(input("termo da serie:"))
soma=0
while(k<0):
	soma=soma+(pow(x,t)/(factorial(n)*f)
	t=t+1

print(n,9)
-- ERROR:
File "XXXX", line 8
    t=t+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:33:30) 
-- CODE:
from math import*
n=int(input("termo geral da serie: "))
x=float(input("digite um numero real: "))
k=int(input("termo da serie:"))
soma=0
while(k<0):
	soma=soma+(pow(x,t)/(factorial(n)*f)
	t=t+1

print(round(k,9)
-- ERROR:
File "XXXX", line 8
    t=t+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:33:44) 
-- CODE:
from math import*
x=float(input("digite um numero real: "))
k=int(input("termo da serie:"))
soma=0
while(k<0):
	soma=soma+(pow(x,t)/(factorial(n)*f)
	t=t+1

print(round(k,9)
-- ERROR:
File "XXXX", line 7
    t=t+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:33:49) 
-- CODE:
x=float(input("digite um numero real: "))
k=int(input("termo da serie:"))
soma=0
while(k<0):
	soma=soma+(pow(x,t)/(factorial(n)*f)
	t=t+1

print(round(k,9)
-- ERROR:
File "XXXX", line 6
    t=t+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:34:13) 
-- CODE:
x=float(input("digite um numero real: "))
k=int(input("termo da serie:"))
soma=0
while(soma<0):
	soma=soma+(pow(x,t)/(factorial(n)*f)
	t=t+1

print(round(k,9)
-- ERROR:
File "XXXX", line 6
    t=t+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:34:37) 
-- CODE:
x=float(input("digite um numero real: "))
k=int(input("termo da serie:"))
soma=0
while(soma<0):
	soma=soma+(pow(x,t)/(factorial(n)*f)
	soma=soma+1

print(round(k,9)
-- ERROR:
File "XXXX", line 6
    soma=soma+1
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:34:50) 
-- CODE:
x=float(input("digite um numero real: "))
k=int(input("termo da serie:"))
soma=0
while(soma<0):
	soma=soma+(pow(x,t)/(factorial(n)*f)
	x=x+1

print(round(k,9)
-- ERROR:
File "XXXX", line 6
    x=x+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
